--- a/lib/template.html
+++ b/lib/template.html
@@ -92,11 +92,11 @@
 {% if page.image %}
   {% assign img_path = "/assets/images/768/" %}
   {% assign seo_page_image = page.image.path | default: page.image.facebook | default: page.image.twitter | default: page.image %}
-  {% assign seo_page_imag = img_path | append: seo_page_image %}
+  {% assign full_path = img_path | append: seo_page_image %}
   {% unless seo_page_image contains "://" %}
     {% assign seo_page_image = seo_page_image | absolute_url %}
   {% endunless %}
-  {% assign seo_page_image = seo_page_image | escape %}
+  {% assign seo_page_image = full_path | escape %}
 {% endif %}
 
 {% if seo_tag.title and seo_title %}
