--- a/lib/template.html
+++ b/lib/template.html
@@ -93,10 +93,11 @@
   {% assign img_path = "/assets/images/768/" %}
   {% assign seo_page_image = page.image.path | default: page.image.facebook | default: page.image.twitter | default: page.image %}
   {% assign full_path = img_path | append: seo_page_image %}
-  {% assign seo_page_image = full_path | escape %}
-  {% unless seo_page_image contains "://" %}
+  {% if seo_page_image contains "://" %}
     {% assign seo_page_image = seo_page_image | absolute_url %}
-  {% endunless %}
+  {% else %}
+    {% assign seo_page_image = full_path | escape %}
+  {% endif %}
 {% endif %}
 
 {% if seo_tag.title and seo_title %}
