--- a/lib/template.html
+++ b/lib/template.html
@@ -94,7 +94,7 @@
   {% assign seo_page_image = page.image.path | default: page.image.facebook | default: page.image.twitter | default: page.image %}
   {% assign full_path = img_path | append: seo_page_image %}
   {% if seo_page_image contains "://" %}
-    {% assign seo_page_image = seo_page_image | absolute_url %}
+    {% assign seo_page_image = seo_page_image %}
   {% else %}
     {% assign seo_page_image = full_path | absolute_url %}
   {% endif %}
